// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableHeaderResizable should have an active and ascending class if sorting by ASC 1`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableHead>
      <thead>
        <TableRow>
          <tr>
            <TableHeaderResizable
              colKey="aKey"
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              scope="col"
              sortDirection="ASC"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                <span
                  className="bx--table-header-label"
                >
                  Header
                </span>
              </th>
            </TableHeaderResizable>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeaderResizable should have an active class if it is the sort header and the sort state is not NONE 1`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableHead>
      <thead>
        <TableRow>
          <tr>
            <TableHeaderResizable
              colKey="aKey"
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                <span
                  className="bx--table-header-label"
                >
                  Header
                </span>
              </th>
            </TableHeaderResizable>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeaderResizable should render 1`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableHead>
      <thead>
        <TableRow>
          <tr>
            <TableHeaderResizable
              colKey="aKey"
              isSortHeader={false}
              isSortable={false}
              onClick={[MockFunction]}
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                <span
                  className="bx--table-header-label"
                >
                  Header
                </span>
              </th>
            </TableHeaderResizable>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeaderResizable should render 2`] = `
<Table
  isSortable={false}
>
  <table
    className="bx--data-table bx--data-table--no-border"
  >
    <TableHead>
      <thead>
        <TableRow>
          <tr>
            <TableHeaderResizable
              colKey="aKey"
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                <span
                  className="bx--table-header-label"
                >
                  Header
                </span>
              </th>
            </TableHeaderResizable>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;
